update-manager (1:0.93.1) intrepid; urgency=low

  * UpdateManager/UpdateManager.py:
    - make the init_proxy stuff look for the apt.conf proxy 
      as well (thanks to vega--)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 11:29:00 +0200

update-manager (1:0.93) intrepid; urgency=low

  [ Michael Vogt ]
  * UpdateManager/UpdateManager.py:
    - fix typo (LP: #252195)
  * DistUpgrade/DistUpgradeController.py:
    - fix crash in cleanup code
  
  [ Jonathan Riddell ]
  * port the kde frontend to qt4

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 09:01:45 +0200

update-manager (1:0.92) intrepid; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - use nvidia-common to detect what driver package is needed
      and install it if the user had a previous nvidia driver 
    (thanks to Alberto Milone)
  * improvements to the NonInteractive frontend

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 Jul 2008 09:26:47 +0200

update-manager (1:0.91.10) intrepid; urgency=low

  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - improved error handling for people who run
      /tmp with noexec (LP: #219518)
  * DistUpgrade/ReleaseAnnouncement:
    - fixes in the announcement text (thanks to 
      Brian Murray, LP: #250693)
  * DistUpgrade/removal_blacklist.cfg:
    - remove nvidia-glx from the removal blacklist,
      the naming schema changed in intrepid and the
      old packages need to go way (LP: #249329)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Jul 2008 12:04:34 +0200

update-manager (1:0.91.9) intrepid; urgency=low

  * UpdateManager/Core/MetaRelease.py:
    - make the default meta-release location easily 
      changable via /etc/update-manager/meta-release
  * data/meta-release:
    - make the default configuration easier configurable
  * data/release-upgrades:
    - default to "normal" upgrades for intrepid

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Jul 2008 13:30:28 +0100
