@@ -10,8 +10,12 @@ from optparse import OptionParser
 from gettext import gettext as _
 import time
 import sys
+import urllib2
+from DistUpgrade.utils import init_proxy
 
 if __name__ == "__main__":
+
+  init_proxy()
 
   parser = OptionParser()
   parser.add_option ("-d", "--devel-release", action="store_true",
