@@ -3,6 +3,8 @@ update-manager (1:0.93.1) intrepid; urgency=low
   * UpdateManager/UpdateManager.py:
     - make the init_proxy stuff look for the apt.conf proxy 
       as well (thanks to vega--)
+  * do-release-upgrade:
+    - unify proxy configuration between gtk and cli UI
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 11:29:00 +0200
 
